--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -52,7 +52,7 @@ We thank the U.S. National Marine Fisheries Service and the Indian Ministry of E
 
 Commercial landings of sardine are known for strong year-to-year fluctuations. A key driver is thought to be environmental variability, to which small forage fish are especially sensitive. We examined the environmental drivers associated with landings fluctuations in the Indian oil sardine using a 32-year time series off Kerala state. Past research suggested a variety of influential variables: precipitation, upwelling intensity, ocean temperature (SST), chlorophyll concentration and large-scale coupled atmosphere–ocean phenomena (ENSO). Using the life-history of the Indian oil sardine, we developed hypotheses concerning how these environmental variables might affect landings and tested them using generalized additive models which allow non-linear response curves and dynamic linear models which allow time-varying responses. We found significant correlation for only two variables: upwelling intensity and the multi-year average nearshore SST.  Both monsoon (Jul-Sep) and post-monsoon (Oct-Mar) landings were correlated with upwelling intensity in June-September. Upwelling intensity has both a positive effect (fueling higher food availability) and a negative effect at extreme intensity (bringing poorly oxygenated water to the surface). However, the most significant correlation (adjusted R$^2$ of 67.5\%) was between the 2.5 year average nearshore SST and post-monsoon landings. The multi-year average SST also been identified as a predictor for Pacific sardine and southern African sardine fluctuations, suggesting that the average SST over the sardine life-span successfully captures a variety of factors which predict future abundance. The temperature in the Western Indian Ocean has been steadily increasing and the warming has been most extreme during the summer monsoon. Our work highlights that changes in sea temperature in the Southeast Indian Sea, which is warming, are likely affecting oil sardine landings. 
 \newline\newline
-\noindent{\bf Keywords}: Indian oil sardine, catch prediction, GAM modeling, climate, sea surface temperature, remote sensing, Southeastern Arabian Sea
+\noindent{\bf Keywords}: Indian oil sardine, catch prediction, GAM modeling, climate, sea surface temperature, remote sensing, Southeast Arabian Sea
 
 \end{abstract}
 
@@ -67,7 +67,7 @@ Environmental variability is known to be a key driver of population variability 
 The Indian oil sardine  is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the marine catch in the Indian fisheries [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment, but in this fishery, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery and hence landings.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine. Precipitation during the monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011],  with direct measures of productivity such as nearshore zooplankton and phytoplankton abundance [@Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019], and with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST can affect both somatic growth rates and juvenile survival but in this system also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) and correlations have been found between ENSO indices and sardine landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxic events which affect sardines [@Vallivattathillametal2017].
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine. Precipitation during the monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011],  with direct measures of productivity such as nearshore zooplankton and phytoplankton abundance [@Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019], and with nearshore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST can affect both somatic growth rates and juvenile survival but in this system also can cause fish to move offshore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Niño/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) and correlations have been found between ENSO indices and sardine landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxic events which affect sardines [@Vallivattathillametal2017].
 
 <!--
 Mury and Edelman used atmospheric presure differential as the metric of monsoon intensity and found a different pattern. Effect of monsoon was negative up to a theshold and then effect was positive after that. They gave a weird explaination. Low DO was bad up to the theshold but after threshold, it increased producivity. Used 1928-1955 landings.
@@ -93,14 +93,14 @@ Unfortunately historical biomass estimates are not possible for the Indian oil s
 
 ### Study Area
 
-Our analysis focuses on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivity and surface chlorophyll in this region during summer and early fall [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the post-monsoon period [@Madhupratapetal2001].
+Our analysis focuses on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea, one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the study area, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the nearshore and offshore and high primary productivity and surface chlorophyll in this region during summer and early fall [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the post-monsoon period [@Madhupratapetal2001].
 
 ### Oil sardine life cycle and fishery
 
 <!-- life cycle of the oil sardine -->
 The Indian oil sardine fishery is restricted to the narrow strip of the western India continental shelf, within 20 km from the shore (Figure `r ref("fig:studyarea")`).  The yearly cycle of the fishery begins at the start of spawning during June to July, corresponding with the onset of the summer monsoon [@Chidambaram1950; @AntonyRaja1969] and the initiation of strongly cooler nearshore SST due to upwelling (Figure `r ref("fig:SSTts")`). At this time, the mature fish migrate from offshore to coastal spawning areas, and the spawning begins during the summer monsoon period when temperature, salinity and suitable food availability are conducive for larval survival [@Chidambaram1950; @MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008; @Nairetal2016].  Although peak spawning occurs in June to July, spawning continues into September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970] and early- and late-spawning cohorts are evident in the length distributions of the 0-year fish.  Spawning occurs in waters outside of the traditional range of the fishery [@AntonyRaja1964], and after spawning the adults migrate closer to the coast where the spent fish become exposed to the fishery.
 
-After eggs are spawned, they develop rapidly into larvae [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the summer monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish (40mm to 100mm) from early spawning appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow, and the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the summer monsoon returns, the oil sardine cycle begins anew.
+After eggs are spawned, they develop rapidly into larvae [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the summer monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish (40mm to 100mm) from early spawning appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow, and the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move offshore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the summer monsoon returns, the oil sardine cycle begins anew.
 
 Catches along the Kerala coast are high throughout the year except during quarter 2, Apr-Jun (Figure `r ref("fig:catch")`). The age-distribution caught by the fishery varies through the year.  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is first dominated by 1-2.5 year old mature fish [@AntonyRaja1969; @Bensam1964a; @Nairetal2016].   In August or September a spike of 0-year (40mm) juveniles from the June spawning typically appears in the catch [@AntonyRaja1969;  @Nairetal2016] and another spike of 0-year fish is sometimes seen in February from the late fall spawning [@PrabhuDhulkhed1967; @PrabhuDhulkhed1970].  From October through June, the catch is dominated by fish from 120mm-180mm [@PrabhuDhulkhed1970; @AntonyRaja1970; @Nairetal2016] which is a mix of 0-year, 1-year and 2-year fish [@Nairetal2016; @Rohitetal2018].  
 
@@ -109,7 +109,7 @@ Catch is reported quarterly not monthly. Along the west coast, the length compos
 -->
 
 <!--
-As the success of commercial fishery for each season is determined by the number of juveniles recruited at the beginning of the same season, rainfall, which affects spawning success, has been used to forecast the strength of juvenile brood entering the fishery. Though earlier studies have shown that most of spawning activity occurs in the near-shore area or in the mouths of estuaries, there are observations of eggs and larvae in the shelf region even at 200m depth (citation). Also, studies from other upwelling ecosystems (citation), have shown that the planktonic stage larvae accumulate in frontal zones as well as in river plumes. Studies from Bakun (citation), Bakun and English (citation), Cury and Roy (citation) etc. explain the linkage to the atmospheric and oceanic processes based on number of hypothesis like Optimal environment window, Match-mismatch hypothesis etc. Also, the changes in the fishery in either short term or long term is explained for other similar theories such as population expansion (Mac Call's hypothesis) and the Wasp waist hypothesis.
+As the success of commercial fishery for each season is determined by the number of juveniles recruited at the beginning of the same season, rainfall, which affects spawning success, has been used to forecast the strength of juvenile brood entering the fishery. Though earlier studies have shown that most of spawning activity occurs in the nearshore area or in the mouths of estuaries, there are observations of eggs and larvae in the shelf region even at 200m depth (citation). Also, studies from other upwelling ecosystems (citation), have shown that the planktonic stage larvae accumulate in frontal zones as well as in river plumes. Studies from Bakun (citation), Bakun and English (citation), Cury and Roy (citation) etc. explain the linkage to the atmospheric and oceanic processes based on number of hypothesis like Optimal environment window, Match-mismatch hypothesis etc. Also, the changes in the fishery in either short term or long term is explained for other similar theories such as population expansion (Mac Call's hypothesis) and the Wasp waist hypothesis.
 -->
 
 
@@ -153,7 +153,7 @@ Our hypotheses (Table `r ref("tab:hypotheses")`) focus mainly on two drivers: up
 
 and small pelagics in upwelling systems such as that off the coast of SW India coast are  particular influenced by upwelling intensity [].  Upwelling drives both the productivity in these systems (sardine food) and temperature with affects survival and somatic growth.  
 
-1. In addition to advection of larvae offshore, upwelling brings low oxygen water to the surface which discourages inshore migration to coastal spawning areas.  Thus due to both lower SST and lower dissolved oxygen, strong upwelling during the spawning season is expected to be negatively associated with the spawning biomass in the near-shore region.
+1. In addition to advection of larvae offshore, upwelling brings low oxygen water to the surface which discourages inshore migration to coastal spawning areas.  Thus due to both lower SST and lower dissolved oxygen, strong upwelling during the spawning season is expected to be negatively associated with the spawning biomass in the nearshore region.
 
 1. Upwelling is associated with higher productivity and higher density of zooplankton, which leads to better larval and juvenile growth and survival.  Thus the strength of upwelling during the post-spawning quarters should be associated with higher non-spawning biomass in subsequent years.  
 
@@ -250,11 +250,11 @@ Sardines in all the world's ecosystems exhibit large fluctuations in abundance [
 
 Many studies on Pacific sardines have looked at the correlation between ocean surface temperature (SST) and recruitment.  Temperature can have direct effect on larval survival and growth and an indirect effect on food availability.  Studies in the California Current System, have found that SST explains (a portion of) year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017] and that the average nearshore temperature over multiple seasons is the relevant explanatory variable. Similar to  these studies, we found that the average nearshore SST over multiple seasons was the covariate that explained the most variability in catch both in the monsoon and post-monsoon months. McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while the other studies, and ours, that found a relationship allowed a non-linearity.  Both Jacobson and MacCall (1995) and Checkley et al. (2017) found a step-like response function for temperature: below a threshold value the effect of temperature was linear and above the threshold, the effect was flat and at lower temperatures the effect was negative and became positive as temperature increased.  Our analysis found a similar pattern with a negative effect when the 2.5-year average temperature was below $28.35^\circ$C and positive above and with the positive effect leveling off above $28.5^\circ$C (Figure `r ref("fig:cov-effects")`).
 
-There were four outlier years when Kerala oil sardine landings were much lower than expected based on prior catches: 1986, 1991, 1994 and 2013.  The 2.5-year average SST predicted the collapses in 1986 and 1991 (Figure `r ref("fig:fitted")`); the size of the residual with the covariate was much smaller than without the covariate. The largest collapse was in 1994 and the most recent, in our dataset, was 2013. The 2.5-year average SST did not predict the 1994 nor 2013 collapses. There was no change in the size  of the residual with and without the covariate. In fact, none of the covariates we tested changed the size of the model residuals for 1994 nor 2013. The causes of these unusual declines appear unrelated to the environmental factors we studied. This suggests either that other factors, biological or anthropogenic, drove these declines or that a particular combination of environmental factors led to the declines. It should also be noted that our upwelling indices captured only one aspect of upwelling: the nearshore intensity. Other aspects of upwelling also affect oil sardines, such as the spatial extent both along the coast and off the coast and the timing of the start of upwelling. 
+There were four outlier years when Oct-Mar oil sardine landings were much lower than expected based on prior catches: 1986, 1991, 1994 and 2013 (Figure `r ref("fig:fitted")`, Panel C).  The 2.5-year average SST explained the collapses in 1986 and 1991; the size of the prediction was much closer to the observed catch (Figure `r ref("fig:fitted")`, Panel D). The largest collapse was in 1994 and the most recent, in our dataset, was 2013. The 2.5-year average SST did not explain the 1994 nor 2013 collapses. There was no change in the size  of the residual with and without the covariate. The same pattern was seen for the Jul-Sep catch, with the exception that 1991 did not have unusually low Jul-Sep catch. The 2.5-year average SST reduced the prediction error for 1986, but did not (appreciably) for 1994 nor 2013. In fact, none of the covariates we tested explained the lower than expected 1994 and 2013 catches. The causes of these unusual declines appear unrelated to the environmental factors we studied, suggesting either that other factors, biological or anthropogenic, drove these declines or that a particular combination of environmental factors led to the declines. It should also be noted that our upwelling indices captured only one aspect of upwelling: the nearshore intensity. Other aspects of upwelling also affect oil sardines, such as the spatial extent both along the coast and off the coast and the timing of the start of upwelling. 
 
-Seasonal productivity in the SE Arabian Sea upwelling system is driven by the summer monsoon, which causes strong coastal upwelling that moves from the south to the north over the summer. This drives a strong seasonal pattern of zooplankton abundance (Figure `r ref("fig:SSTts")`). Despite the strong connection between sardine recruitment, growth and survival with upwelling, we found no correlation between upwelling in the prior season with landings. We did find that the upwelling intensity in the current season explained variability in landings in the current season. The biological reasons behind a positive relationship with upwelling are clear. Upwelling drives productivity and higher food resources in the current season leads to higher recruitment and higher numbers of 0-year fish in the landings and brings sardines into the nearshore to feed where they are exposed to the fishery. However, the explanatory power of the upwelling indices was mainly due to the negative effect of extremely high upwelling (Figure `r ref("fig:cov-effects")`). Extremely high upwelling transports larval sardines offshore and can create regions of low oxygen which sardines avoid.
+Seasonal productivity in the Southeast Arabian Sea upwelling system is driven by the summer monsoon, which causes strong coastal upwelling that moves from the south to the north over the summer. This drives a strong seasonal pattern of zooplankton abundance (Figure `r ref("fig:SSTts")`). There are biological reasons to expect a positive relationship between upwelling intensity and landings: upwelling drives productivity and higher food resources in the current season which leads to higher larval and juvenile survival and higher numbers of 0-year fish in the landings and brings sardines into the nearshore to feed where they are exposed to the fishery. These positive effects on 0-year fish would cascade to future seasons also. Despite the strong connection between sardine recruitment, growth and survival with upwelling, upwelling in the prior season did not explain year-to-year variation in landings. We did find that the upwelling intensity in the current season explained variability in landings in the current season, however, the effect was negative not positive and the negative effect emerged at extremely high upwelling (Figure `r ref("fig:cov-effects")`). This negative is not surprising. Extremely high upwelling transports larval sardines offshore and creates regions of low oxygen which sardines avoid [@Guptaetal2016]. What was surprising is that the effect was not uni-modal, with a positive effect at low to moderate upwelling and becoming negative for extremely high upwelling.
 
-One of the purposes of our research was to investigate environmental covariates that would improve prediction of landings, specific reduce the errors from a basic auto-correlated model using only past catch. In Table `r ref("tab:covariate-models")`, the out of sample prediction errors are shown in the LOOCV RMSE (leave-one-out cross-validation root-mean-square error) column. The simpler catch models, with only $N_{t-1}$ as the covariate have better predictive performance than a null model which uses only last years catch (in the same period) as the prediction. For Jul-Sep, the addition of the best covariates only improves the predictions for one covariate, Jun-Sep SST. The Jul-Sep catch is difficult to forecast. It has high variability that is poorly explained by past catch or the environment. In contrast, the Oct-Mar catch is much better explained by prior catch (higher $R^2$) and by the multi-year temperature. The multi-year average SST reduced the prediction errors using either the more complex base model with two years of past catch as the covariate (from LOOCV 1.062 to 0.827) and the simpler base model with only the prior year catch (from LOOCV 0.966 to 0.796).
+One of the purposes of our research was to investigate environmental covariates that would improve prediction of landings, not simply explain variability. To test this, we used leave-one-out cross-validataion to generate out-of-sample prediction errors. The predictions were compared to a null prediction: the catch year. With this null model, whatever the catch was in the prior is the the prediction. This is a standard null model for testing forecasts. In Table `r ref("tab:covariate-models")`, the out-of-sample prediction errors are shown in the LOOCV RMSE (leave-one-out cross-validation root-mean-square error) column. The GAM catch models, the models with a non-linear effect of past catches, have better predictive performance than the null model. For Jul-Sep, the addition of the best covariates, based on fit to the data rather than prediction performance, only improved the predictions for one covariate, Jun-Sep SST. The Jul-Sep catch is difficult to forecast. It has high variability that is poorly explained by past catch or the environment. In contrast, the Oct-Mar catch is much better explained by prior catch (higher $R^2$) and by the multi-year average SST and it is easier to forecast. The multi-year average SST reduced the prediction errors using either the more complex base model with two years of past catch as the covariate (from LOOCV 1.062 to 0.827) and the simpler base model with only the prior year catch (from LOOCV 0.966 to 0.796).
 
 # Conclusions
 
@@ -276,7 +276,7 @@ Nonetheless, remote sensing derived estimates of chlorophyll front locations hav
 
 # Figure Legends
 
-Figure `r ref("fig:studyarea")`. Close up of Kerala State with the latitude/longitude boxes used for the satellite data. Kerala State is marked in grey and the oil sardine catch from this region is being modeled.
+Figure `r ref("fig:studyarea")`. Southwest coast of India with the latitude/longitude boxes used for the satellite data. Kerala State is marked in grey and the oil sardine catch from this region is being modeled.
 
 ```{r catch-dat, echo=FALSE,message=FALSE,warning=FALSE}
 dat=oilsardine_qtr
@@ -286,15 +286,15 @@ catchmeds=round(tapply(dat$Kerala, dat$Qtr, median, na.rm=TRUE))
 names(catchmeds)=paste("Q",1:4,sep="")
 ```
 
-Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4.  Note that the fishery is closed July 1 to mid-August, thus the fishery is only open 1.5 months in Jul-Sep. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
+Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4 (Oct-Dec).  Note that the fishery is closed July 1 to mid-August, thus the fishery is only open 1.5 months in quarter 3 (Jul-Sep). The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
 
 Figure `r ref("fig:SSTts")`.  Key oil sardine life-history events overlaid on the monthly sea surface temperature in the nearshore and offshore and the nearshore chlorophyll concentration.
 
-Figure `r ref("fig:COVts")`.  Remote sensing covariates used in the analysis.  All data are monthly averages over Box 4 in Figure `r ref("fig:studyarea")` on the Kerala coast off of Kochi.  Panel A) Upwelling Index. The upwelling index is the difference between the near-shore sea surface temperature (SST) and the off-shore SST defined as 3 degrees longitude offshore. Panel B) Surface chlorophyll-a (CHL).  The CHL data are only available from 1997 onward.  Panel C) Sea surface temperature constructed from Advanced Very High Resolution Radiometer (AVHRR). Panel D) Average daily rainfall (mm/day) off the Kerala coast.
+Figure `r ref("fig:COVts")`.  Remote sensing covariates used in the analysis.  All data are monthly averages over Box 4 in Figure `r ref("fig:studyarea")` on the Kerala coast off of Kochi.  Panel A) Upwelling Index. The upwelling index is the difference between the nearshore sea surface temperature (SST) and the offshore SST defined as 3 degrees longitude offshore. Panel B) Surface chlorophyll-a (CHL).  The CHL data are only available from 1997 onward.  Panel C) Sea surface temperature from Advanced Very High Resolution Radiometer (AVHRR). Panel D) Average daily rainfall (mm/day) off the Kerala coast.
 
-Figure `r ref("fig:cov-effects")`.  Effects of covariates estimated from the GAM models. Panel A) Effect of the 2.5 year average nearshore SST on catch during the catch during July-September (late spawning and early post-spawning) months.   Panel B) Effect of upwelling (inshore/off-shore SST differential) during June-September in the current season on July-September catch.  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than off-shore.  Panel C) Effect of the 2.5 year average nearshore SST on catch during the catch during October-March (post-monsoon, age-0, -1, -2 year fish).   Panel D) Effect of upwelling (inshore/off-shore SST differential) during June-September in the current season on October-March catch. Strong upwelling (positive upwelling index) in the larval and juvenile high growth period (Oct-Dec) is associated with higher early survival and larger cohorts of age-0 fish in the catch.
+Figure `r ref("fig:cov-effects")`.  Effects of the two most influential covariates estimated from the GAM models: 2.5 year average SST and upwelling intensity in June-September (spawning months). Panel A) Effect of the 2.5 year average SST on Jul-Sep catch (late spawning and early post-spawning months).   Panel B) Effect of upwelling (nearshore/offshore SST differential) during June-September in the current season on Jul-Sep catch.  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than offshore.  Panel C) Effect of the 2.5 year average SST on Oct-Mar catch (post-monsoon, age-0, -1, -2 year fish). Panel D) Effect of upwelling (nearshore/offshore SST differential) during June-September in the current season on Oct-Mar catch.
 
-Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without environmental covariates.  Panel A) Fitted versus observed log catch in the spawning months with only non-spawning catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon_t$. Panel B) Fitted versus observed log catch in July-September with the 2.5-year average nearshore SST added as a covariate to the model in panel A. This model was: $S_t = s(N_{t-1}) + s(V_{t}) + \epsilon_t$. Panel C) Fitted versus observed log catch in the post-monsoon months with only post-monsoon catch in the previous season and July-September catch two seasons prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon_t$. Panel D) Fitted versus observed log catch in the post-monsoon months with 2.5-year average nearshore SST ($V$) added as covariates. This model was $N_t = s(N_{t-1}) + s(S_{t-2}) + s(V_t) + \epsilon_t$.
+Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without the 2.5 year average SST included as a covariate.  The line is the one-to-one line (prediction equals observed). Panel A) Fitted versus observed log catch in Jul-Sep (late monsoon) with only Oct-Mar catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon_t$. Panel B) Fitted versus observed log catch in Jul-Sep with the 2.5-year average SST added as a covariate to the model in panel A. This model was: $S_t = s(N_{t-1}) + s(V_{t}) + \epsilon_t$. Panel C) Fitted versus observed log Oct-Mar catch with only Oct-Mar catch in the previous season and Jul-Sep catch two seasons prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon_t$. Panel D) Fitted versus observed log Oct-Mar catch with 2.5-year average SST ($V$) added. This model was $N_t = s(N_{t-1}) + s(S_{t-2}) + s(V_t) + \epsilon_t$.
 
 ```{r child = 'Tables.Rmd', echo=FALSE}
 ```
